fix(editor): Fix selection rect visible at top left of screen on selection start

--- a/packages/js-draw/src/tools/SelectionTool/SelectionTool.scss
+++ b/packages/js-draw/src/tools/SelectionTool/SelectionTool.scss
@@ -117,6 +117,10 @@
 			// handles.
 			pointer-events: all;
 		}
+
+		&.-empty {
+			opacity: 0;
+		}
 	}
 }
 
